added users to dropdown

--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -6,7 +6,7 @@
 
 <% @statuses.each do |status| %>
 <div class ="status">
-	<strong>Name</strong>
+	<p><strong>Name: </strong><%= status.user.full_name %></p>
 	<p><%= status.content %></p>
 	<div class="meta">
 		<%= link_to time_ago_in_words(status.created_at) + " ago", status %>
