--- a/app/views/statuses/_form.html.erb
+++ b/app/views/statuses/_form.html.erb
@@ -11,11 +11,11 @@
     </div>
   <% end %>
 
-
-    <%= f.input :user_id %>
+  <div class="field">
+    <%= f.input :user_id, collection: User.all, label_method: :full_name %>
     <%= f.input :content %>
 
-    
+  </div> 
     
   <div class="form-actions">
     <%= f.button :submit %>
